23rd may  add video screen

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,14 @@
 	<false/>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
+
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Photo Library Needed</string>
+
+	<key>NSCameraUsageDescription</key>
+	<string>Camera Usage</string>
+
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Microphone usage</string>
 </dict>
 </plist>
